[gd_scene load_steps=37 format=2]

[ext_resource path="res://Assets/background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Animation/RectAnimation/0.png" type="Texture" id=2]
[ext_resource path="res://Assets/Triangle Mask.png" type="BitMap" id=3]
[ext_resource path="res://Assets/Triangle.png" type="Texture" id=4]
[ext_resource path="res://Fonts/FFFFORWA.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/CreateServer.gd" type="Script" id=6]
[ext_resource path="res://Assets/Park.png" type="Texture" id=7]
[ext_resource path="res://Assets/PopUp/Popup.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/glowingSquare/glowingSquareAnmi.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/logo/parklogo.png" type="Texture" id=10]
[ext_resource path="res://Assets/logo/mountainlogo.png" type="Texture" id=11]
[ext_resource path="res://Assets/GUI/buttonTextureBlueDisabled.png" type="Texture" id=12]
[ext_resource path="res://Assets/logo/riverlogo.png" type="Texture" id=13]
[ext_resource path="res://Assets/GUI/buttonTextureBluePressed.png" type="Texture" id=14]
[ext_resource path="res://Assets/GUI/buttonTextureBlue.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 6
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=18]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=19]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=20]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.0470588, 0, 0.313726, 1 )

[node name="CreateServer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -98, -186 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSort" type="YSort" parent="."]

[node name="glowing" parent="YSort" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 188.0
margin_top = 109.0
margin_right = 188.0
margin_bottom = 109.0

[node name="Square" type="TextureRect" parent="YSort"]
visible = false
margin_left = 42.0
margin_top = 10.0
margin_right = 336.0
margin_bottom = 208.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="YSort"]
margin_left = 4.0
margin_top = 175.0
margin_right = 24.0
margin_bottom = 202.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
texture_click_mask = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="YSort"]
margin_left = 6.0
margin_top = 204.0
margin_right = 49.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.0
margin_top = -92.0
margin_right = 153.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.5
margin_top = -72.0
margin_right = 1049.5
margin_bottom = 166.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParkButton" type="TextureButton" parent="control"]
margin_left = 37.0
margin_top = 73.0
margin_right = 91.0
margin_bottom = 91.0
toggle_mode = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="control/ParkButton"]
margin_left = 6.0
margin_top = 3.0
margin_right = 30.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 5 )
text = "Park"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Park" type="TextureRect" parent="control/ParkButton" groups=["Logo"]]
margin_left = 34.0
margin_right = 53.0
margin_bottom = 16.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MountainButton" type="TextureButton" parent="control"]
margin_left = 113.0
margin_top = 73.0
margin_right = 192.0
margin_bottom = 91.0
disabled = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 14 )
texture_disabled = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="control/MountainButton"]
modulate = Color( 1, 1, 1, 0.2 )
margin_left = 6.0
margin_top = 3.0
margin_right = 30.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 5 )
text = "Mountain"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mount" type="TextureRect" parent="control/MountainButton" groups=["Logo"]]
modulate = Color( 1, 1, 1, 0.2 )
margin_left = 59.0
margin_right = 78.0
margin_bottom = 16.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RiverButton" type="TextureButton" parent="control"]
margin_left = 214.0
margin_top = 73.0
margin_right = 270.0
margin_bottom = 91.0
disabled = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 14 )
texture_disabled = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="control/RiverButton"]
modulate = Color( 1, 1, 1, 0.2 )
margin_left = 6.0
margin_top = 3.0
margin_right = 30.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 5 )
text = "River"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="River" type="TextureRect" parent="control/RiverButton" groups=["Logo"]]
modulate = Color( 1, 1, 1, 0.2 )
margin_left = 36.0
margin_right = 55.0
margin_bottom = 16.0
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="control"]
margin_left = 35.5
margin_top = 99.0
margin_right = 103.5
margin_bottom = 110.0
custom_fonts/font = SubResource( 3 )
text = "Game Name : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="control"]
margin_left = 36.5
margin_top = 125.0
margin_right = 141.5
margin_bottom = 136.0
custom_fonts/font = SubResource( 3 )
text = "Number Of Players : "

[node name="Create" type="Button" parent="control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 65.0
margin_top = 62.0
margin_right = 112.0
margin_bottom = 79.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
toggle_mode = true
action_mode = 0
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No2" type="Button" parent="control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = 31.0
margin_right = 10.0
margin_bottom = 48.0
mouse_default_cursor_shape = 2
custom_colors/font_color_pressed = Color( 0.588235, 0.290196, 0.984314, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
toggle_mode = true
action_mode = 0
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No3" type="Button" parent="control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 24.0
margin_top = 31.0
margin_right = 42.0
margin_bottom = 48.0
mouse_default_cursor_shape = 2
custom_colors/font_color_pressed = Color( 0.588235, 0.290196, 0.984314, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
toggle_mode = true
action_mode = 0
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No4" type="Button" parent="control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 55.0
margin_top = 31.0
margin_right = 73.0
margin_bottom = 48.0
mouse_default_cursor_shape = 2
custom_colors/font_color_pressed = Color( 0.588235, 0.290196, 0.984314, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
toggle_mode = true
action_mode = 0
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameName" type="LineEdit" parent="control"]
margin_left = 104.5
margin_top = 95.0
margin_right = 262.5
margin_bottom = 116.0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 21 )
align = 1
max_length = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" parent="." instance=ExtResource( 8 )]
margin_left = -100.0
margin_top = -70.0
margin_right = 100.0
margin_bottom = 70.0

[node name="TextureRect" parent="Popup" index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -70.0
margin_right = 100.0
margin_bottom = 70.0

[node name="header" parent="Popup" index="3"]
margin_top = 31.0
margin_bottom = 43.0

[connection signal="closed" from="YSort/glowing" to="." method="_on_glowing_closed"]
[connection signal="opened" from="YSort/glowing" to="." method="_on_glowing_opened"]
[connection signal="pressed" from="YSort/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="control/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="control/No2" to="." method="_on_No2_pressed"]
[connection signal="pressed" from="control/No3" to="." method="_on_No3_pressed"]
[connection signal="pressed" from="control/No4" to="." method="_on_No4_pressed"]
[connection signal="pressed" from="Popup/Popup_ok" to="." method="_on_Popup_ok_pressed"]

[editable path="Popup"]
